--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,56 +66,6 @@ nav {
     width: 112px;
 }
 
-/*dropdown menu*/
-.dropbtn {
-    background-color: #3E4550;
-    color: white;
-    padding: 16px;
-    font-size: 20px;
-    border: none;
-    height: 42px;
-    width: 112px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.dropdown-content img {
-    padding-right: 14px;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: flex;
-    font-size: 20px;
-    align-content: center;
-
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #767B84;
-}
 
 /*login/signup*/
 body {
@@ -304,30 +254,55 @@ main {
 /*homepagina*/
 
 /*vakantei zoeken*/
-.personenetoevoegen {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    width: 177px;
-}
-
-.personenetoevoegen a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+.drop {
+    position: relative;
+    top: 0.5vw;
 }
 
 .hoeveelpers {
-    border: none;
-    position: relative;
-    top: 8px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer; /* Geeft aan dat het veld interactief is */
+}
+
+.personenetoevoegen {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    width: 100%;
+
 }
 
 .drop:hover .personenetoevoegen {
     display: block;
 }
+
+.keuzepers {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.keuzepers:last-child {
+    border-bottom: none;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.pers {
+    width: calc(100% - 20px); /* Maak ruimte voor de pijl van de nummerinput */
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+
+
+
 
 
 .reizoekenhomepagina {
@@ -348,7 +323,7 @@ main {
 }
 
 .reiszoeken {
-    width: 875px;
+    width: 63vw;
     height: 74px;
     background-color: #E8E7E7;
     border-radius: 10px;
@@ -360,6 +335,8 @@ main {
 #zoekenhome {
     width: 97px;
     height: 44px;
+    position: relative;
+    top: 0.5vw;
 }
 
 .formulierhome {
@@ -368,6 +345,7 @@ main {
 }
 
 #vakantieformulier {
+
     padding: 5px;
 }
 
