--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,6 +263,8 @@ span.psw {
 /*einde header*/
 main {
     background-attachment: fixed;
+    background-repeat: repeat-y;
+
 }
 
 /*homepagina*/
@@ -281,14 +283,12 @@ main {
 .personenetoevoegen {
     display: none;
     position: absolute;
-
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     background-color: #fff;
     border: 1px solid #ccc;
 
 
 }
-
 
 .drop:hover .personenetoevoegen {
     display: block;
@@ -840,7 +840,8 @@ label {
     #vakantieformulier {
         height: 10vw;
     }
-    #vakantieformuliervlucht{
+
+    #vakantieformuliervlucht {
         height: 10vw;
         position: relative;
         top: 31vw;
@@ -917,6 +918,85 @@ label {
     }
 
     /*    einde signup/sign in*/
+    /*contactpage*/
+    .contactgrotefoto {
+        height: 147vw;
+        background-repeat: no-repeat;
+    }
+
+    #naamgrotefoto {
+        display: flex;
+        align-items: end;
+        height: 136vw;
+        position: relative;
+        left: 50px;
+        color: black;
+    }
+
+    .contacttekst {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .tekstklachten {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #tekstcontact {
+        position: relative;
+        top: 5px;
+        width: 59vw;
+    }
+
+    #verticaalcontact {
+        width: 63vw;
+        position: relative;
+        top: 20px;
+    }
+
+    .klachtenformulier {
+        width: 64vw;
+        height: 117vw;
+        background: #E8E7E7;
+        border-radius: 10px;
+        position: relative;
+        left: 18vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        top: 16vw;
+    }
+
+    .kleinlijntje {
+        height: 1.5px;
+        width: 243px;
+        background: black;
+    }
+
+    #send {
+        width: 17vw;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        left: 30.5vw;
+        background-color: #9F252D;
+    }
+    .contactomrulier{
+        flex-direction: column;
+        padding-bottom: 30vw;
+    }
+    #contactpagina{
+        position: relative;
+        left: 19vw;
+        height: 133vw;
+    }
+    #imgvak{
+        display: none;
+    }
+    /*einde contactpage*/
     /* footerresp*/
     .footernormaal {
         display: none;
